# librepods-rs

./: Cargo.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: rust.yml
librepods-cli/: Cargo.toml
librepods-cli/src/: main.rs
librepods-core/: Cargo.toml
librepods-core/src/: lib.rs  transport.rs
librepods-core/src/crossdevice/: mod.rs  packets.rs  relay.rs
librepods-core/src/device/: battery.rs  ble_advert.rs  listening_mode.rs  mod.rs  state.rs
librepods-core/src/protocol/: control_command.rs  mod.rs  opcodes.rs  packets.rs  parser.rs
librepods-linux/: Cargo.toml
librepods-linux/src/: ble.rs  bluez_monitor.rs  l2cap.rs  lib.rs  media.rs
