[package]
name = "librepods-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI daemon for LibrePods — testing and headless operation on Linux"

[dependencies]
librepods-core = { path = "../librepods-core" }
librepods-linux = { path = "../librepods-linux" }
tokio = { version = "1", features = ["full"] }
env_logger = "0.11"
log = "0.4"
clap = { version = "4", features = ["derive"] }

