[package]
name = "librepods-linux"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Linux platform implementations for LibrePods (BlueZ, MPRIS, L2CAP)"

[dependencies]
librepods-core = { path = "../librepods-core" }
tokio = { version = "1", features = ["full"] }
nix = { version = "0.31.2", features = ["socket", "net"] }
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
btleplug = "0.12.0"
libc = "0.2"
log = "0.4"
thiserror = "2"
futures = "0.3"

